--- a/Blog.UI/Views/Shared/_Layout.cshtml
+++ b/Blog.UI/Views/Shared/_Layout.cshtml
@@ -13,6 +13,9 @@
         <a asp-controller="Home" asp-action="Post">
             Post
         </a>
+        <a asp-controller="Home" asp-action="Edit">
+            Edit
+        </a>
     </div>
     <div>
         @RenderBody()
