--- a/Blog.UI/Views/Home/Edit.cshtml
+++ b/Blog.UI/Views/Home/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Post
 
 <div>
-    <form method="post">
+    <form asp-controller="Home" asp-action="Edit" method="post">
         <div>
             <label>Title</label>
             <input asp-for="Title" />
