--- a/Blog.UI/Views/Home/Index.cshtml
+++ b/Blog.UI/Views/Home/Index.cshtml
@@ -1,6 +1,24 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model IEnumerable<Post>
 @{
 }
 <h1>Home</h1>
+<div>
+    <ul>
+        @foreach(var post in Model)
+        {
+        <li>
+            <a asp-controller="Home" asp-action="Post" asp-route-id="@post.Id">
+                @post.Title
+            </a>
+            -
+            <a asp-controller="Home" asp-action="Edit" asp-route-id="@post.Id">
+                Edit
+            </a>
+            -
+            <a asp-controller="Home" asp-action="Remove" asp-route-id="@post.Id">
+                Delete
+            </a>
+        </li>
+        }
+    </ul>
+</div>
