--- a/Blog.UI/Views/Home/Post.cshtml
+++ b/Blog.UI/Views/Home/Post.cshtml
@@ -1,15 +1,4 @@
 ﻿@model Post
 
-<div>
-    <form method="post">
-        <div>
-            <label>Title</label>
-            <input asp-for="Title" />
-        </div>
-        <div>
-            <label>Body</label>
-            <input asp-for="Body" />
-        </div>
-        <input type="submit" value="Submit" />
-    </form>
-</div>
+<h2>@Model.Title</h2>
+<p>@Model.Body</p>
