--- a/Blog.UI/Views/Panel/Edit.cshtml
+++ b/Blog.UI/Views/Panel/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Post
 
 <div>
-    <form asp-controller="Home" asp-action="Edit" method="post">
+    <form asp-controller="Panel" asp-action="Edit" method="post">
         <input asp-for="Id" type="hidden" />
         <div>
             <label>Title</label>
