--- a/Blog.UI/Views/Home/Post.cshtml
+++ b/Blog.UI/Views/Home/Post.cshtml
@@ -1,4 +1,11 @@
 ﻿@model Post
 
 <h2>@Model.Title</h2>
+    
+@if (!String.IsNullOrEmpty(Model.Image))
+    {
+        var imagePath = $"/Image/{Model.Image}";
+        <img src="@imagePath" width="500">
+    }
+
 <p>@Model.Body</p>
