--- a/Blog.UI/Views/Home/Index.cshtml
+++ b/Blog.UI/Views/Home/Index.cshtml
@@ -1,17 +1,26 @@
 ﻿@model IEnumerable<Post>
 @{
 }
-<h1>Home page</h1>
-<div>
-    <ul>
-        @foreach(var post in Model)
-        {
-        <li>
-            <a asp-controller="Home" asp-action="Post" asp-route-id="@post.Id">
-                @post.Title
-            </a>
-        </li>
-        }
-    </ul>
+<div class="main-img">
+    <span class="title">Amazing Blog Site</span>
 </div>
-<img src="~/content/blog/Darvin.jpg" width="500px" />
+<div class="container">
+    @*<ul>
+            @foreach(var post in Model)
+            {
+            <li>
+                <a asp-controller="Home" asp-action="Post" asp-route-id="@post.Id">
+                    @post.Title
+                </a>
+            </li>
+            }
+        </ul>*@
+    @foreach (var post in Model)
+    {
+        var imagePath = $"/Image/{post.Image}";
+        <a asp-controller="Home" asp-action="Post" asp-route-id="@post.Id" class="post">
+            <img src="@imagePath" />
+            <span class="title">@post.Title</span>
+        </a>
+    }
+</div>
