--- a/Blog.UI/Views/Home/Post.cshtml
+++ b/Blog.UI/Views/Home/Post.cshtml
@@ -1,11 +1,18 @@
 ﻿@model Post
 
-<h2>@Model.Title</h2>
+@*<h2>@Model.Title</h2>
     
-@if (!String.IsNullOrEmpty(Model.Image))
-    {
-        var imagePath = $"/Image/{Model.Image}";
-        <img src="@imagePath" width="500">
-    }
-
-<p>@Model.Body</p>
+*@
+<div class="container">
+    <div class="post no-shadow">
+        @if (!String.IsNullOrEmpty(Model.Image))
+        {
+            var imagePath = $"/Image/{Model.Image}";
+            <img src="@imagePath" width="500">
+            <span class="title">@Model.Title</span>
+        }
+    </div>
+    <div class="post-body">
+        @Model.Body
+    </div>
+</div>
