Add meta tags and categoty

--- a/Blog.UI/Views/Home/Index.cshtml
+++ b/Blog.UI/Views/Home/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿@model IEnumerable<Post>
 @{
+    ViewBag.Title = "Blog Website";
+    ViewBag.Description = "This Blog has evrething";
+    ViewBag.Keywords = "blog programminh travel";
 }
 <div class="main-img">
     <span class="title">Amazing Blog Site</span>
