--- a/Blog.UI/Views/Home/Post.cshtml
+++ b/Blog.UI/Views/Home/Post.cshtml
@@ -1,8 +1,11 @@
 ﻿@model Post
 
-@*<h2>@Model.Title</h2>
-    
-*@
+@{ 
+    ViewBag.Title = Model.Title;
+    ViewBag.Description = Model.Description;
+    ViewBag.Keywords = $"{Model.Tags?.Replace(",", " ")} {Model.Category}";
+}
+
 <div class="container">
     <div class="post no-shadow">
         @if (!String.IsNullOrEmpty(Model.Image))
