--- a/Blog.UI/Views/Panel/Edit.cshtml
+++ b/Blog.UI/Views/Panel/Edit.cshtml
@@ -9,6 +9,22 @@
             <input asp-for="Title" />
         </div>
         <div>
+            <label>Description</label>
+            <input asp-for="Description" />
+        </div>
+        <div>
+            <label>Tags</label>
+            <input asp-for="Tags" />
+        </div>
+        <div>
+            <label>Category</label>
+            <select asp-for="Category">
+                <option value="Travel">Travel</option>
+                <option value="Programming">Programming</option>
+                <option value="Photography">Photography</option>
+            </select>
+        </div>
+        <div>
             <label>Body</label>
             <textarea id="editor" asp-for="Body"></textarea>
         </div>
