--- a/Blog.UI/Views/Shared/_Layout.cshtml
+++ b/Blog.UI/Views/Shared/_Layout.cshtml
@@ -4,6 +4,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewBag.Title</title>
+    <meta name="description" content="@ViewBag.Description" />
+    <meta name="keywords" content="@ViewBag.Keywords" />
     <link href="~/css/Style.css" rel="stylesheet" />
 </head>
 <body>
@@ -11,6 +13,9 @@
         <nav>
             <a asp-controller="Home" asp-action="Index">
                 Home
+            </a>
+            <a asp-controller="Home" asp-action="Index" asp-route-categoty="Programming">
+                Programming
             </a>
             <a asp-controller="Panel" asp-action="Index">
                 Admin panel
